run localisation generator

--- a/osu.Game.Rulesets.RurusettoAddon/Localisation/Strings.ru.resx
+++ b/osu.Game.Rulesets.RurusettoAddon/Localisation/Strings.ru.resx
@@ -33,42 +33,53 @@
   <data name="listing-tab"><value>список</value></data>
   <data name="rurusetto-description"><value>открыть список доступных режимов</value></data>
   <data name="user-unknown"><value>Аноним</value></data>
-  <data name="tag-archived"><value>В архиве</value></data>
+  <data name="tag-archived"><value>В АРХИВЕ</value></data>
   <data name="tag-archived-tooltip"><value>Этот режим больше не поддерживается</value></data>
-  <data name="tag-local"><value>Локальный</value></data>
+  <data name="tag-local"><value>ЛОКАЛЬНЫЙ</value></data>
   <data name="tag-local-tooltip"><value>Этот режим установлен только у вас, его нет на вики</value></data>
-  <data name="tag-hardcoded"><value>Встроенный</value></data>
+  <data name="tag-hardcoded"><value>ВСТРОЕННЫЙ</value></data>
   <data name="tag-hardcoded-tooltip"><value>Этот режим встроен в игру и не может быть изменён</value></data>
-  <data name="tag-failed-import"><value>Ошибка импорта</value></data>
+  <data name="tag-failed-import"><value>ОШИБКА ИМПОРТА</value></data>
   <data name="tag-failed-import-tooltip"><value>Режим скачан, но его не удалось импортировать</value></data>
-  <data name="tag-borked"><value>Нерабочий</value></data>
+  <data name="tag-borked"><value>НЕРАБОЧИЙ</value></data>
   <data name="tag-borked-tooltip"><value>Этот режим не работает</value></data>
-  <data name="tag-playable"><value>Рабочий</value></data>
+  <data name="tag-playable"><value>РАБОЧИЙ</value></data>
   <data name="tag-playable-tooltip"><value>Этот режим работает</value></data>
-  <data name="tag-prerelease"><value>Бета</value></data>
+  <data name="tag-prerelease"><value>БЕТА</value></data>
   <data name="tag-prerelease-tooltip"><value>Текущая версия находится в стадии активной разработки</value></data>
   <data name="home-page"><value>Домашняя страница</value></data>
   <data name="report-issue"><value>Сообщить о проблеме</value></data>
   <data name="download-checking"><value>Проверка...</value></data>
   <data name="unavailable-online"><value>Недоступно для прямого скачивания</value></data>
+  <data name="installed-unavailable-online"><value>Установлен, не доступен онлайн</value></data>
   <data name="download"><value>Скачать</value></data>
   <data name="redownload"><value>Скачать заново</value></data>
   <data name="downloading"><value>Загрузка...</value></data>
   <data name="update"><value>Обновить</value></data>
   <data name="remove"><value>Удалить</value></data>
-  <data name="installed"><value>Установлен</value></data>
-  <data name="installed-unavailable-online"><value>Установлен, не доступен онлайн</value></data>
   <data name="cancel-download"><value>Отменить загрузку</value></data>
   <data name="cancel-remove"><value>Отменить удаление</value></data>
+  <data name="cancel-update"><value>Отменить обновление</value></data>
   <data name="refresh"><value>Обновить</value></data>
   <data name="to-be-removed"><value>Будет удалён при следующем входе в игру!</value></data>
   <data name="to-be-installed"><value>Будет установлен при следующем входе в игру!</value></data>
   <data name="to-be-updated"><value>Будет обновлён при следующем входе в игру!</value></data>
+  <data name="installed"><value>Установлен</value></data>
   <data name="outdated"><value>Устарел</value></data>
   <data name="creator-verified"><value>Подтверждённый создатель режима</value></data>
-  <data name="cancel-update"><value>Отменить обновление</value></data>
   <data name="load-error"><value>Не удалось загрузить rurusetto-addon: Пожалуйста, сообщите об этом в репозиторий rurusetto-addon, НЕ в репозиторий osu!lazer: Code {1}</value></data>
   <data name="main-page"><value>Главная</value></data>
   <data name="changelog-page"><value>Список изменений</value></data>
   <data name="unknown-version"><value>Версия неизвестна</value></data>
+  <data name="settings-header"><value>Rurusetto Addon</value></data>
+  <data name="settings-api-address"><value>Адрес API</value></data>
+  <data name="untitled-ruleset"><value>Безымянный режим</value></data>
+  <data name="error-header"><value>О нет!</value></data>
+  <data name="error-footer"><value>Пожалуйста, убедитесь, что у вас есть подключение к интернету и адрес API в настройках не содержит ошибок</value></data>
+  <data name="retry"><value>Обновить</value></data>
+  <data name="listing-fetch-error"><value>Не удалось загрузить список режимов</value></data>
+  <data name="page-fetch-error"><value>Не удалось загрузить страницу</value></data>
+  <data name="subpages-fetch-error"><value>Не удалось загрузить подстраницы</value></data>
+  <data name="error-message-generic"><value>Что-то пошло не так, и я не знаю, что именно!</value></data>
+  <data name="notification-work-incomplete"><value>Кажется, rurusetto addon не смог завершить предыдущую рабочую сессию. Пожалуйста, убедитесь, что ваши действия не могли вызвать ошибок</value></data>
   </root>
